--- a/timer.css
+++ b/timer.css
@@ -8,14 +8,18 @@
 *										 				  *
 ***********************************************************/
 
+body {
+	background: #000000;
+}
+
 .display {
 	flex: 1;
 	display: flex;
 	flex-direction : column;
 	align-items : center;
 	justify-content : center;
-	background: #001f3f;
-	font-family: tahoma !important;
+	background: #000000;
+	font-family: 'Orbitron', sans-serif !important;
 	padding-bottom: 60px;
 }
 .event_title {
@@ -69,9 +73,12 @@ button:focus{
 }
 .clock{
 	width: auto;
+	margin-left: 70px;
 }
 #numbers{
 	width: auto;
+	margin-right: 214px;
+	margin-top: 200px;
 }
 #numbers span{
 	float: left;
@@ -85,16 +92,16 @@ button:focus{
 	box-sizing: border-box;
 }
 #numbers span:nth-child(1){
-  background: #fa5559;
+  background: #000000;
 }
 #numbers span:nth-child(2){
-  background: #26c2b9;
+  background: #000000;
 }
 #numbers span:nth-child(3){
-  background: #f6bc58;
+  background: #000000;
 }
 #numbers span:nth-child(4){
-  background: #2dcb74;
+  background: #000000;
 }
 
 #numbers:after{
@@ -103,16 +110,19 @@ button:focus{
 	clear: both;
 }
 
+div#units {
+    margin-right: 196px;
+}
+
 #units span{
 	float: left;
 	width: 25%;
 	text-align: center;
-	margin-top: 30px;
 	color: #ddd;
 	text-transform: uppercase;
 	font-size: 16px;
 	letter-spacing: 2px;
-	text-shadow: 1px 1px 1px rgba(10,10,10, 0.7);
+	font-family: 'Orbitron', sans-serif;
 }
 
 span.turn{
